<resources>
    <string name="app_name">My Vinyl</string>
    <string name="background">background</string>
    <string name="authenticate_using_a_personal_access_token">Authenticate using a personal access token</string>
    <string name="generating_a_user_token_is_as_easy_as_clicking_the_generate_token_button_on_the_developer_settings_keep_this_token_private">Generating a user token is as easy as clicking the Generate token button on the developer settings. Keep this token private.</string>
    <string name="access_with_token">Access with token</string>
    <string name="dialog_error">Error while loading user data</string>
    <string name="dialog_error_message">There was an error while trying to load data from Discogs.com. You will be redirected to the Login screen to provide a new Access Token.</string>
    <string name="ok">OK</string>
    <string name="tab_1">Collection</string>
    <string name="tab_2">Wantlist</string>
    <string name="tab_3">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_collection">%d in Collection</string>
    <string name="loading_collection">Loading collection</string>
    <string name="avatar">avatar</string>
    <string name="username">Loading user profile</string>
    <string name="user_wantlist">%s\'s Wantlist</string>
    <string name="in_wantlist">%d in Wantlist</string>
    <string name="loading_wantlist">Loading Wantlist</string>
    <string name="thanks_for_downloading_my_app">Thanks for downloading my App!</string>
    <string name="thank_you_letter">Thank you for downloading my application,
        I hope you are enjoying it, if you have any suggestions I would love to hear them.
        You can contact me on this email address or my website.\n~ Miquel Beltran</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="version">Version: </string>
    <string name="album_art">Album Art</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="remove_from_collection">Remove from Collection</string>
    <string name="remove_from_wantlist">Remove from Wantlist</string>
    <string name="add_to_wantlist">Add to Wantlist</string>
    <string-array name="price_type">
        <item>lowest</item>
        <item>average</item>
    </string-array>
    <string-array name="price_value">
        <item>"0"</item>
        <item>"1"</item>
    </string-array>
</resources>
