<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey300">

    <RelativeLayout
        android:id="@+id/activity_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="work.beltran.discogsbrowser.app.release.ReleaseActivity"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/image_album"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@color/grey300"
            android:contentDescription="@string/album_art" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_album"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="-27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_library_add_white_24dp"
            app:fabSize="normal"
            app:rippleColor="@color/grey300"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/image_album"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="PLACEHOLDER" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_artist"
            android:layout_alignStart="@+id/text_artist"
            android:layout_below="@+id/text_artist"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="2016" />

        <TextView
            android:id="@+id/text_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/text_artist"
            android:layout_alignRight="@+id/text_artist"
            android:layout_below="@+id/text_artist"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/text_year"
            android:layout_toRightOf="@+id/text_year"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Vinyl" />

        <Button
            android:id="@+id/button_remove_from_collection"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_year"
            android:layout_alignStart="@+id/text_year"
            android:layout_below="@+id/text_year"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_clear_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/remove_from_collection"
            android:visibility="gone"
            tools:ignore="RtlHardcoded"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_add_to_wantlist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_year"
            android:layout_alignStart="@+id/text_year"
            android:layout_below="@+id/button_remove_from_collection"
            android:drawableLeft="@drawable/ic_favorite_magenta_48px"
            android:drawablePadding="8dp"
            android:text="@string/add_to_wantlist"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button_remove_from_wantlist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_year"
            android:layout_alignStart="@+id/text_year"
            android:layout_below="@+id/button_add_to_wantlist"
            android:drawableLeft="@drawable/ic_clear_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/remove_from_wantlist"
            android:visibility="gone"
            tools:ignore="RtlHardcoded"
            tools:visibility="visible" />
    </RelativeLayout>
</ScrollView>
